# FileDataMcpServer

./: .env.example  .gitignore  MANAGER_EYES_ONLY.txt  README.md  SETUP_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: activity.db  memory.db
goals/: manifest.md
memory/: MEMORY.md
memory/logs/: 2026-02-20.md
src/filedata/: __init__.py  config.py  loader.py  registry.py  server.py
src/filedata_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_loader.py  test_server.py
tools/: manifest.md
