[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filedata-mcp"
version = "0.1.0"
description = "MCP server for reading CSV and Excel files via FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "pandas>=3.0.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.32.0",
    "python-dotenv>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pip-tools>=7.0.0",
]

[project.scripts]
filedata = "filedata.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
